added react router, add list, display lists, show one list

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 .App {
   text-align: center;
 }
-#glasses-emoji{
+/* #glasses-emoji{
   height: 3.5vh;
   display: inline;
-}
+} */
 
+.links{
+  list-style-type: none;
+}
