--- a/src/App.css
+++ b/src/App.css
@@ -62,5 +62,22 @@
   border: 1px solid black;
   height: 100px;
   width: 100px;
- 
+  font-size: 2.5rem;
+}
+.numbers:hover{
+  background-color: rgb(241, 193, 105);
+}
+#screen{
+  margin: 5px;
+  height: 2rem;
+  width: 13rem;
+  color: blue;
+  text-align: right;
+  font-size: 1.5rem;
+}
+
+.calc-entry{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
