calculator functionality working except need to add decimal and adding more operations to the sequence if user does not hit equals first

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,12 @@
 .numbers:hover{
   background-color: rgb(241, 193, 105);
 }
+.op{
+  color: rgb(41, 139, 132);
+}
+#equals{
+  color:rgb(255, 98, 0);
+}
 #screen{
   margin: 5px;
   height: 2rem;
