--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,16 @@
   flex-direction: column;
   align-items: center;
 }
+
+button:active{
+  transform: scale(97%);
+}
+#clear {
+  background-color: red;
+  color:white;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  height: 30px;
+  width: 100px;
+}
