--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
 }
 
 .search-div{
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
   gap: .25rem;
@@ -99,4 +100,9 @@ button:active{
   border-radius: 5px;
   height: 30px;
   width: 100px;
+}
+
+/* LIST SHOW */
+#items-listed {
+ 
 }
