--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,28 @@
   color:black;
 }
 
+
+/* LIST SHOW */
+#items-listed {
+ width: fit-content;
+ margin: 0 auto;
+ text-align: left;
+}
+
+#refresh-list {
+  margin-top: 15px;
+}
+
+#edit-links {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+}
+
 /* calculator */
 #numbers-grid{
   display: grid;
@@ -100,9 +122,4 @@ button:active{
   border-radius: 5px;
   height: 30px;
   width: 100px;
-}
-
-/* LIST SHOW */
-#items-listed {
- 
 }
